Decoupled bot start

--- a/Simple.Smart.Chat.CommandBot/appsettings.json
+++ b/Simple.Smart.Chat.CommandBot/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PublicChatDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,15 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "BotServiceSettings": {
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest",
     "Port": 5672,
     "RequestedConnectionTimeout": 5000,
-    "InboundQueue": "BotResponsesQueue",
-    "OutboundQueue": "CommandQueriesQueue",
-    "BotName": "Public Chat Bot"
-  }  
+    "OutboundQueue": "BotResponsesQueue",
+    "InboundQueue": "CommandQueriesQueue",
+    "BotName": "Public Chat Bot",
+    "StockApiUrl": "https://stooq.com/q/l/"
+  }
 }
