finished bot integration

--- a/Simple.Smart.Chat.CommandBot/appsettings.json
+++ b/Simple.Smart.Chat.CommandBot/appsettings.json
@@ -14,7 +14,7 @@
     "RequestedConnectionTimeout": 5000,
     "OutboundQueue": "BotResponsesQueue",
     "InboundQueue": "CommandQueriesQueue",
-    "BotName": "Public Chat Bot",
-    "StockApiUrl": "https://stooq.com/q/l/"
-  }
+    "BotName": "Public Chat Bot"
+  },
+  "StockApiUrl": "https://stooq.com/q/l/"
 }
